# mcp-prompts-esp32

./: Cargo.toml  README.md  TODO.md  chart_script(1).py  chart_script.py  esp32-build-scripts.md  esp32-source-files.md  final-implementation-plan.md  platformio.ini  script(1).py  script.py  usb-hid-implementation.md
.github/workflows/: esp-build.yml
esp32-hid-rs/: Cargo.toml  README.md
esp32-hid-rs/scripts/: build_esp32_hid.sh  flash_esp32_hid.sh
esp32-hid-rs/src/: composite.rs  hid_keyboard.rs  layout.rs  lib.rs
esp32-hid-rs/src/hid/: descriptors.rs
esp32-hid-rs/tests/: composite.rs  hid_keyboard.rs
src/embedded/: main.rs
